[package]
name = "dtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.20.1", features = ["native-tls"] }
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
serde = "1.0.188"
serde_json = "1.0.107"
spinners = "4.1.0"
url = "2.4.1"
vlc-rs = "0.3.0"
youtube_dl = { version = "0.9.0", features = ["downloader-rustls-tls"] }
